@@ -1,3 +1,1 @@
 Zena.use Bricks::Static
-Skin.send(:include, Bricks::Static::SkinMethods)
-Site.send(:include, Bricks::Static::SiteMethods)
